--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,15 +1,10 @@
+<!-- Loading state while fetching data -->
+<app-loading-state *ngIf="bookService.isLoading$ | async"></app-loading-state>
+
 <div class="row">
 
-  <ng-container *ngIf="books$ | async as books; else loading">
+  <ng-container *ngIf="books$ | async as books;">
     <app-book-list-grid [books]="books"></app-book-list-grid>
   </ng-container>
 
 </div>
-
-<ng-template #loading>
-  <div class="col-md-12 text-center">
-    <div class="spinner-border text-secondary" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </div>
-</ng-template>
