--- a/src/app/shared/components/loading-state/loading-state.component.html
+++ b/src/app/shared/components/loading-state/loading-state.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mb-2">
   <div class="col-md-12 text-center">
     <div class="spinner-border text-secondary" role="status">
       <span class="sr-only">Loading...</span>
