Init router by page number

--- a/src/app/modules/book/book.component.html
+++ b/src/app/modules/book/book.component.html
@@ -47,6 +47,8 @@
       <!-- Book page content -->
       <div [innerHtml]="pageBeingViewed.content | safeHtml"></div>
 
+      <app-book-page></app-book-page>
+
     </div>
     <!-- /.blog-post -->
 
